recommiting with pyproject modification, s django-cors-headers is displaying on the file. Pushing to master.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.8"
 django = "^3.0.7"
 djangorestframework = "^3.11.0"
+django-cors-headers = "^3.4.0"
 
 [tool.poetry.dev-dependencies]
 djangorestframework = "^3.11.0"
